gobmkida/c0/print_c_dfa
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/print_c_dfa/src/patterns/dfa.c:1012:16: error: use of undeclared identifier 'aD_4'
fprintf( of_0, aD_4, ( unsigned int)pdfa->states[i].att); 
               ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/print_c_dfa/src/patterns/dfa.c:1013:17: error: use of undeclared identifier 'off_58C786'
fprintf( of_0, &off_58C786[2]); 
                ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/print_c_dfa/src/patterns/dfa.c:1029:16: error: use of undeclared identifier 'off_58C786'
fprintf( of_0, off_58C786); 
               ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/print_c_dfa/src/obj/3/dfa.o] Error 1
